--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div id="main">
       <div id="panel">
         <div id="top">
-          <div class="elem"><h2>Hit</h2><div class="box">2</div></div>
-          <div class="elem"><h2>Time</h2><div class="box">2</div></div>
-          <div class="elem"><h2>Score</h2><div class="box">2</div></div>
+          <div class="elem"><h2>Hit</h2><div id="hitval" class="box">0</div></div>
+          <div class="elem"><h2>Time</h2><div id="time" class="box">60</div></div>
+          <div class="elem"><h2>Score</h2><div id="score" class="box">0</div></div>
         </div>
         <div id="btm"></div>
       </div>
