--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <div id="btm"></div>
       </div>
     </div>
+    <audio id="pop" controls>
+      <source src="pop.mp3" type="audio/mp3">
+  </audio>
+  <audio id="win" controls>
+    <source src="win.mp3" type="audio/mp3">
+</audio>
     <script src="main.js"></script>
   </body>
 </html>
